--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ html {
   display: grid;
   grid-template-columns: 80% 20%;
   grid-template-rows: 10% 90%;
+  background-color: #d4d4d8;
 }
 .header {
   grid-column: 1 / span 2;
