--- a/styles.css
+++ b/styles.css
@@ -24,12 +24,7 @@ body {
   display: grid;
   grid-template-columns: 20% 80%;
 }
-.sidebar {
-  height: 100vh;
-  background-color: #0ea5e9;
-  display: grid;
-  grid-template-rows: 100px 1fr 1fr;
-}
+
 .main-content {
   display: grid;
   grid-template-columns: 80% 20%;
@@ -129,4 +124,35 @@ body {
   grid-row: 2;
   display: grid;
   grid-template-rows: 1fr 1fr;
+}
+
+.sidebar {
+  height: 100vh;
+  background-color: #0ea5e9;
+  display: grid;
+  grid-template-rows: 100px 1fr 1fr;
+  padding-left: 25px;
+}
+.sidebar .logo {
+  max-height: 70%;
+  padding: 20px;
+}
+.sidebar p {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.sidebar .sidebar-icon {
+  filter: invert(100%);
+}
+.sidebar a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+.sidebar .links-container-two {
+  align-self: flex-end;
 }
