--- a/styles.css
+++ b/styles.css
@@ -7,33 +7,58 @@ html {
     font-family: "Inter var", sans-serif;
   }
 } */
-@font-face {
+/* @font-face {
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
   src: url("/assets/fonts/Inter_Web/Inter-Regular.woff2") format("woff2"),
     url("/assets/fonts/Inter_Web/Inter-Regular.woff") format("woff");
-}
+} */
 *,
 html,
 body {
-  font-family: "Inter", sans-serif !important;
+  font-family: "Roboto", sans-serif !important;
 }
 .container {
   display: grid;
   grid-template-columns: 20% 80%;
 }
 
-.main-content {
+.sidebar {
+  height: 100vh;
+  background-color: #0ea5e9;
   display: grid;
-  grid-template-columns: 80% 20%;
-  grid-template-rows: 20% 80%;
-  background-color: #d4d4d8;
+  grid-template-rows: 100px 1fr 1fr;
+  padding-left: 25px;
+}
+.sidebar .logo {
+  max-height: 70%;
+  padding: 20px;
+}
+.sidebar p {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.sidebar .sidebar-icon {
+  filter: invert(100%);
+}
+.sidebar a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+.sidebar .links-container-two {
+  align-self: flex-end;
 }
 .header {
   background-color: #fff;
   grid-column: 1 / span 2;
+  grid-row: 1;
   display: grid;
   grid-template-rows: 1fr 1fr;
 }
@@ -79,7 +104,8 @@ body {
   align-items: center;
   justify-content: space-between;
 }
-.bottombar .profile {
+.bottombar .profile,
+.bottom .trend {
   display: flex;
   align-items: center;
 }
@@ -93,7 +119,7 @@ body {
   font-weight: 600;
   line-height: 1rem;
 }
-.username {
+.profile .username {
   font-size: 1rem;
   font-weight: 600;
   /* flex: 1 1 100%; */
@@ -111,48 +137,117 @@ body {
   color: #fff;
   background-color: #0ea5e9;
 }
-
-.main-content .projects {
+.main-content {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  /* grid-template-rows: 15% 80%; */
+  grid-template-rows: repeat(auto-fit, minmax(20px, 1fr));
+  background-color: #d4d4d8;
+}
+.titles {
   grid-column: 1;
   grid-row: 2;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
 }
-.main-content .announcements {
-  grid-column: 2;
-  grid-row: 2;
+.projects {
+  grid-column: 1;
+  grid-row: 3;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  /* grid-template-columns: 1fr 1fr; */
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  /* grid-template-rows: repeat(autofill, 1fr); */
+  padding: 10px;
+  margin: 10px 0px 10px 10px;
+  overflow: auto;
+  /* align-items: flex-start;
+  justify-items: center; */
+}
+.projects h2,
+.announcements h2 {
+  font-size: 1.1em;
+  font-weight: 600;
+}
+.projects .card {
+  background-color: #fff;
+  padding: 15px 20px;
+  min-height: 150px;
+  display: grid;
+  border-radius: 10px;
+  border-left: 7px solid #38bdf8;
+  overflow: hidden;
+  max-height: 170px;
+  max-width: 300px;
+  margin: 10px;
+}
+.card h3 {
+  font-weight: 600;
+  align-self: flex-end;
+  margin-bottom: 5px;
+}
+.card p {
+  font-size: 0.87em;
+  /* letter-spacing: 0.07em; */
+  line-height: 1.3em;
+  color: #64748b;
+  font-weight: 100;
+}
+.card .card-buttons {
+  display: flex;
+  justify-content: flex-end;
+  gap: 15px;
+  /* justify-self: flex-end; */
+  align-self: flex-end;
+}
+.announcements {
+  grid-column: 2;
+  grid-row: 3;
+  display: grid;
+  grid-template-rows: 20px 1fr 20px 1fr;
+  padding: 10px;
+  margin: 10px 20px 10px 0px;
+  gap: 1.3em;
+}
+.announcements .top,
+.announcements .bottom {
+  background-color: #fff;
+  padding: 15px 20px;
+  border-radius: 10px;
+  display: grid;
+  align-items: center;
+}
+.announcements h2 {
+  align-self: flex-end;
+}
+.announcements .line {
+  border: 0.05em solid #d4d4d8;
+  margin: 0.5em 0;
+}
+.top .news h4 {
+  font-weight: 600;
+  font-size: 0.9em;
+  margin-bottom: 4px;
+}
+.top .news p {
+  font-size: 0.7em;
+  line-height: 1.3em;
+  color: #64748b;
+  font-weight: 100;
 }
 
-.sidebar {
-  height: 100vh;
-  background-color: #0ea5e9;
-  display: grid;
-  grid-template-rows: 100px 1fr 1fr;
-  padding-left: 25px;
+.bottom .trends {
+  background-color: #fff;
+  padding: 15px 20px;
+  border-radius: 10px;
 }
-.sidebar .logo {
-  max-height: 70%;
-  padding: 20px;
+.trend img {
+  width: 4em;
+  margin-right: 10px;
 }
-.sidebar p {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+.trend .username {
+  font-size: 0.8rem;
 }
-.sidebar .sidebar-icon {
-  filter: invert(100%);
-}
-.sidebar a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: 600;
-  font-size: 1.1rem;
-}
-.sidebar .links-container-two {
-  align-self: flex-end;
+.trend .name {
+  font-size: 0.75rem;
+  line-height: 1.3em;
+  color: #64748b;
+  font-weight: 100;
 }
