--- a/styles.css
+++ b/styles.css
@@ -1,64 +1,23 @@
-/* @import url("https://rsms.me/inter/inter.css");
-html {
-  font-family: "Inter", sans-serif;
-}
-@supports (font-variation-settings: normal) {
-  html {
-    font-family: "Inter var", sans-serif;
-  }
-} */
-/* @font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url("/assets/fonts/Inter_Web/Inter-Regular.woff2") format("woff2"),
-    url("/assets/fonts/Inter_Web/Inter-Regular.woff") format("woff");
-} */
 *,
 html,
 body {
   font-family: "Roboto", sans-serif !important;
 }
+html,
+body {
+  height: 100%;
+}
 .container {
-  display: grid;
-  grid-template-columns: 20% 80%;
-}
-
-.sidebar {
   height: 100vh;
-  background-color: #0ea5e9;
   display: grid;
-  grid-template-rows: 100px 1fr 1fr;
-  padding-left: 25px;
-}
-.sidebar .logo {
-  max-height: 70%;
-  padding: 20px;
-}
-.sidebar p {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-.sidebar .sidebar-icon {
-  filter: invert(100%);
-}
-.sidebar a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: 600;
-  font-size: 1.1rem;
-}
-.sidebar .links-container-two {
-  align-self: flex-end;
+  grid-template-columns: 250px 1fr 350px;
+  grid-template-rows: 140px 1fr;
+  background-color: #d4d4d8;
 }
 .header {
-  background-color: #fff;
-  grid-column: 1 / span 2;
+  grid-column: 2 / span 2;
   grid-row: 1;
+  background-color: #fff;
   display: grid;
   grid-template-rows: 1fr 1fr;
 }
@@ -88,16 +47,6 @@ body {
   gap: 15px;
   margin-right: 2em;
 }
-.header .fa_icon {
-  width: 1.1em;
-}
-.notifications-name .icon {
-  width: 3em;
-}
-.notifications-name p {
-  font-size: 0.75rem;
-  font-weight: bold;
-}
 .header .bottombar {
   grid-row: 2;
   display: flex;
@@ -109,62 +58,57 @@ body {
   display: flex;
   align-items: center;
 }
-.bottombar img {
-  width: 4em;
-  margin-left: 25px;
-  margin-right: 10px;
-}
-.bottombar p {
-  font-size: 0.7rem;
-  font-weight: 600;
-  line-height: 1rem;
-}
-.profile .username {
-  font-size: 1rem;
-  font-weight: 600;
-  /* flex: 1 1 100%; */
-}
 .bottombar .action-buttons {
   display: flex;
   justify-content: flex-end;
   gap: 5px;
   margin-right: 2em;
 }
-.action-buttons .profile-button-action {
-  padding: 6px 20px;
-
-  border-radius: 15px;
-  color: #fff;
+.sidebar {
+  grid-column: 1;
+  grid-row: 1 / 3;
   background-color: #0ea5e9;
+  padding-left: 25px;
+  display: flex;
+  flex-flow: column nowrap;
+
+  /* display: grid; */
+  /* grid-template-rows: 100px 1fr 1fr; */
 }
-.main-content {
+.sidebar > div {
+  height: 100%;
+  display: flex;
+  /* flex-direction: column; */
+  /* justify-content: space-between; */
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+.sidebar p {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+/* .main-content {
+  grid-column: 2;
   display: grid;
-  grid-template-columns: 70% 30%;
-  /* grid-template-rows: 15% 80%; */
-  grid-template-rows: repeat(auto-fit, minmax(20px, 1fr));
+  grid-template-columns: 1fr 350px;
+  grid-template-rows: 200px 40px 1fr;
   background-color: #d4d4d8;
-}
-.titles {
-  grid-column: 1;
-  grid-row: 2;
-}
+} */
+
 .projects {
-  grid-column: 1;
-  grid-row: 3;
-  display: grid;
-  /* grid-template-columns: 1fr 1fr; */
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  /* grid-template-rows: repeat(autofill, 1fr); */
+  grid-column: 2;
   padding: 10px;
   margin: 10px 0px 10px 10px;
   overflow: auto;
-  /* align-items: flex-start;
-  justify-items: center; */
 }
-.projects h2,
-.announcements h2 {
-  font-size: 1.1em;
-  font-weight: 600;
+.projects > div {
+  display: flex;
+  flex-wrap: wrap;
+  /* flex: 1; */
+  justify-content: center;
 }
 .projects .card {
   background-color: #fff;
@@ -198,13 +142,13 @@ body {
   align-self: flex-end;
 }
 .announcements {
-  grid-column: 2;
-  grid-row: 3;
+  grid-column: 3;
   display: grid;
   grid-template-rows: 20px 1fr 20px 1fr;
   padding: 10px;
   margin: 10px 20px 10px 0px;
   gap: 1.3em;
+  overflow: auto;
 }
 .announcements .top,
 .announcements .bottom {
@@ -217,6 +161,72 @@ body {
 .announcements h2 {
   align-self: flex-end;
 }
+
+/* *******************************
+********* Small Items ************
+*********************************/
+
+/* ~~~~~ Sidebar ~~~~~ */
+.sidebar .logo {
+  max-height: 70px;
+  padding: 20px;
+  position: static;
+}
+.sidebar .sidebar-icon {
+  filter: invert(100%);
+}
+.sidebar a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+/* .sidebar .links-container-two {
+  align-self: flex-end;
+} */
+
+/* ~~~~~ Search Top Bar ~~~~~ */
+.header .fa_icon {
+  width: 1.1em;
+}
+.notifications-name .icon {
+  width: 3em;
+}
+.notifications-name p {
+  font-size: 0.75rem;
+  font-weight: bold;
+}
+
+/* ~~~~~ Search Bottom Bar ~~~~~ */
+.bottombar img {
+  width: 4em;
+  margin-left: 25px;
+  margin-right: 10px;
+}
+.bottombar p {
+  font-size: 0.7rem;
+  font-weight: 600;
+  line-height: 1rem;
+}
+.profile .username {
+  font-size: 1rem;
+  font-weight: 600;
+  /* flex: 1 1 100%; */
+}
+.action-buttons .profile-button-action {
+  padding: 6px 20px;
+  border-radius: 15px;
+  color: #fff;
+  background-color: #0ea5e9;
+}
+/* ~~~~~ Projects and Announcements ~~~~~ */
+
+.container h2 {
+  font-size: 1.1em;
+  font-weight: 600;
+}
+
+/* ~~~~~ Announcements ~~~~~ */
 .announcements .line {
   border: 0.05em solid #d4d4d8;
   margin: 0.5em 0;
