--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
-*,
-html,
-body {
+/* Minified CSS Source map Restructure Beautify  */
+body,
+html {
   font-family: "Roboto", sans-serif !important;
 }
-html,
-body {
+
+body,
+html {
   height: 100%;
 }
+
 .container {
   height: 100vh;
   display: grid;
@@ -14,13 +16,26 @@ body {
   grid-template-rows: 140px 1fr;
   background-color: #d4d4d8;
 }
+
+.card h3,
+.container h2 {
+  font-size: 1.1em;
+  font-weight: 600;
+}
+
+.container h2 {
+  margin: 0 0 5px 10px;
+}
+
 .header {
   grid-column: 2 / span 2;
   grid-row: 1;
   background-color: #fff;
   display: grid;
   grid-template-rows: 1fr 1fr;
+  box-shadow: 1px 1px 5px #64748b;
 }
+
 .header .topbar {
   grid-row: 1;
   display: grid;
@@ -29,218 +44,205 @@ body {
   gap: 35px;
   padding: 10px;
 }
+
 .topbar .search-bar {
   display: flex;
-  width: 100%;
+  width: 70%;
   gap: 5px;
   margin-left: 25px;
 }
+
 .search-bar input {
   flex: 1 1 100%;
   border-radius: 15px;
+  background-color: #d4d4d8;
+  box-sizing: border-box;
+  border: 0;
+  padding-left: 15px;
+  height: 30px;
 }
+
+.header .fa_icon {
+  width: 1.5em;
+}
+
+.notifications-name .icon {
+  width: 3em;
+}
+
+.notifications-name p,
+.top .news h4 {
+  font-size: 0.9em;
+  font-weight: 700;
+}
+
+.bottombar img {
+  width: 4.2em;
+  margin-left: 25px;
+  margin-right: 10px;
+}
+
+.bottombar p {
+  font-size: 0.8rem;
+  font-weight: 500;
+  line-height: 1rem;
+}
+
+.profile .username,
+.sidebar a {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.action-buttons .profile-button-action {
+  padding: 8px 25px;
+  border-radius: 18px;
+  color: #fff;
+  background-color: #0ea5e9;
+  border: 0;
+  font-size: 1.05rem;
+  box-shadow: 1px 0 3px #64748b;
+}
+
 .topbar .notifications-name {
   display: flex;
-  /* flex-wrap: nowrap; */
   align-items: center;
   justify-content: flex-end;
   gap: 15px;
   margin-right: 2em;
 }
+
 .header .bottombar {
   grid-row: 2;
-  display: flex;
-  align-items: center;
   justify-content: space-between;
 }
+
+.bottom .trend,
 .bottombar .profile,
-.bottom .trend {
+.header .bottombar,
+.sidebar p {
   display: flex;
   align-items: center;
 }
+
 .bottombar .action-buttons {
   display: flex;
   justify-content: flex-end;
   gap: 5px;
   margin-right: 2em;
 }
+
 .sidebar {
   grid-column: 1;
-  grid-row: 1 / 3;
+  grid-row: 1/3;
   background-color: #0ea5e9;
   padding-left: 25px;
   display: flex;
   flex-flow: column nowrap;
-
-  /* display: grid; */
-  /* grid-template-rows: 100px 1fr 1fr; */
 }
+
 .sidebar > div {
   height: 100%;
   display: flex;
-  /* flex-direction: column; */
-  /* justify-content: space-between; */
   flex-wrap: wrap;
   align-content: space-between;
 }
+
 .sidebar p {
-  display: flex;
-  align-items: center;
   gap: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
-/* .main-content {
-  grid-column: 2;
-  display: grid;
-  grid-template-columns: 1fr 350px;
-  grid-template-rows: 200px 40px 1fr;
-  background-color: #d4d4d8;
-} */
 
-.projects {
-  grid-column: 2;
-  padding: 10px;
-  margin: 10px 0px 10px 10px;
-  overflow: auto;
-}
-.projects > div {
-  display: flex;
-  flex-wrap: wrap;
-  /* flex: 1; */
-  justify-content: center;
-}
-.projects .card {
-  background-color: #fff;
-  padding: 15px 20px;
-  min-height: 150px;
-  display: grid;
-  border-radius: 10px;
-  border-left: 7px solid #38bdf8;
-  overflow: hidden;
-  max-height: 170px;
-  max-width: 300px;
-  margin: 10px;
-}
-.card h3 {
-  font-weight: 600;
-  align-self: flex-end;
-  margin-bottom: 5px;
-}
-.card p {
-  font-size: 0.87em;
-  /* letter-spacing: 0.07em; */
-  line-height: 1.3em;
-  color: #64748b;
-  font-weight: 100;
-}
-.card .card-buttons {
-  display: flex;
-  justify-content: flex-end;
-  gap: 15px;
-  /* justify-self: flex-end; */
-  align-self: flex-end;
-}
-.announcements {
-  grid-column: 3;
-  display: grid;
-  grid-template-rows: 20px 1fr 20px 1fr;
-  padding: 10px;
-  margin: 10px 20px 10px 0px;
-  gap: 1.3em;
-  overflow: auto;
-}
-.announcements .top,
-.announcements .bottom {
-  background-color: #fff;
-  padding: 15px 20px;
-  border-radius: 10px;
-  display: grid;
-  align-items: center;
-}
-.announcements h2 {
-  align-self: flex-end;
-}
-
-/* *******************************
-********* Small Items ************
-*********************************/
-
-/* ~~~~~ Sidebar ~~~~~ */
 .sidebar .logo {
   max-height: 70px;
   padding: 20px;
   position: static;
 }
+
 .sidebar .sidebar-icon {
   filter: invert(100%);
 }
+
 .sidebar a {
   text-decoration: none;
   color: #fff;
-  font-weight: 600;
   font-size: 1.1rem;
 }
-/* .sidebar .links-container-two {
+
+.announcements,
+.projects {
+  padding: 20px;
+  overflow: auto;
+}
+
+.projects {
+  grid-column: 2;
+}
+
+.projects > div {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+}
+
+.projects .card {
+  background-color: #fff;
+  padding: 15px 20px;
+  margin: 10px;
+  border-radius: 10px;
+  border-left: 7px solid #38bdf8;
+  display: grid;
+  overflow: hidden;
+  min-height: 150px;
+}
+
+.card h3 {
+  letter-spacing: 0.04em;
   align-self: flex-end;
-} */
-
-/* ~~~~~ Search Top Bar ~~~~~ */
-.header .fa_icon {
-  width: 1.1em;
-}
-.notifications-name .icon {
-  width: 3em;
-}
-.notifications-name p {
-  font-size: 0.75rem;
-  font-weight: bold;
+  margin-bottom: 5px;
 }
 
-/* ~~~~~ Search Bottom Bar ~~~~~ */
-.bottombar img {
-  width: 4em;
-  margin-left: 25px;
-  margin-right: 10px;
-}
-.bottombar p {
-  font-size: 0.7rem;
-  font-weight: 600;
-  line-height: 1rem;
-}
-.profile .username {
-  font-size: 1rem;
-  font-weight: 600;
-  /* flex: 1 1 100%; */
-}
-.action-buttons .profile-button-action {
-  padding: 6px 20px;
-  border-radius: 15px;
-  color: #fff;
-  background-color: #0ea5e9;
-}
-/* ~~~~~ Projects and Announcements ~~~~~ */
-
-.container h2 {
-  font-size: 1.1em;
-  font-weight: 600;
+.card p,
+.top .news p {
+  font-size: 0.87em;
+  line-height: 1.3em;
+  color: #64748b;
+  font-weight: 100;
 }
 
-/* ~~~~~ Announcements ~~~~~ */
+.card .card-buttons {
+  display: flex;
+  justify-content: flex-end;
+  gap: 15px;
+  align-self: flex-end;
+}
+
+.announcements {
+  display: flex;
+  flex-direction: column;
+}
+
+.announcements .bottom,
+.announcements .top {
+  background-color: #fff;
+  padding: 15px 20px;
+  border-radius: 10px;
+  margin: 10px 10px 40px;
+  flex: 0 1 auto;
+}
+
 .announcements .line {
   border: 0.05em solid #d4d4d8;
   margin: 0.5em 0;
 }
+
 .top .news h4 {
   font-weight: 600;
-  font-size: 0.9em;
   margin-bottom: 4px;
 }
+
 .top .news p {
   font-size: 0.7em;
-  line-height: 1.3em;
-  color: #64748b;
-  font-weight: 100;
 }
 
 .bottom .trends {
@@ -248,13 +250,16 @@ body {
   padding: 15px 20px;
   border-radius: 10px;
 }
+
 .trend img {
   width: 4em;
   margin-right: 10px;
 }
+
 .trend .username {
   font-size: 0.8rem;
 }
+
 .trend .name {
   font-size: 0.75rem;
   line-height: 1.3em;
