--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,17 @@
 body,
 html {
   font-family: "Roboto", sans-serif !important;
-}
-
-body,
-html {
   height: 100%;
 }
 
 .container {
   height: 100vh;
   display: grid;
-  grid-template-columns: 250px 1fr 350px;
+  /* grid-template-columns: 250px 1fr 350px; */
+  grid-template-columns:
+    minmax(200px, 250px)
+    minmax(455px, 1fr)
+    minmax(280px, 350px);
   grid-template-rows: 140px 1fr;
   background-color: #d4d4d8;
 }
@@ -52,6 +52,9 @@ html {
   margin-left: 25px;
 }
 
+.search-bar .logo-landscape {
+  display: none;
+}
 .search-bar input {
   flex: 1 1 100%;
   border-radius: 15px;
@@ -178,6 +181,7 @@ html {
 
 .projects {
   grid-column: 2;
+  z-index: 2;
 }
 
 .projects > div {
@@ -265,4 +269,46 @@ html {
   line-height: 1.3em;
   color: #64748b;
   font-weight: 100;
+}
+
+@media (max-width: 935px) {
+  .container {
+    grid-template-columns:
+      70px
+      minmax(455px, 1fr)
+      minmax(250px, 350px);
+  }
+  .sidebar {
+    grid-row: 2/3;
+    padding-left: 25px;
+  }
+  .sidebar > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .sidebar .logo {
+    display: none;
+  }
+  .search-bar .logo-landscape {
+    display: block;
+    max-height: 35px;
+    /* padding: 10px; */
+    align-self: flex-start;
+  }
+  .sidebar a {
+    display: none;
+  }
+  .sidebar-icon {
+    height: 35px;
+  }
+
+  .header {
+    grid-column: 1 / 4;
+    grid-row: 1;
+    background-color: #fff;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    box-shadow: 1px 1px 5px #64748b;
+  }
 }
