--- a/styles.css
+++ b/styles.css
@@ -31,49 +31,62 @@ html {
   grid-column: 2 / span 2;
   grid-row: 1;
   background-color: #fff;
-  display: grid;
-  grid-template-rows: 1fr 1fr;
+  /* display: grid;
+  grid-template-rows: 1fr 1fr; */
+  display: flex;
+  flex-direction: column;
   box-shadow: 1px 1px 5px #64748b;
+  padding: 10px 20px;
 }
 
-.header .topbar {
+.header .topbar,
+.header .bottombar {
   grid-row: 1;
-  display: grid;
+  /* display: grid;
   align-items: center;
   grid-template-columns: 2fr 1fr;
-  gap: 35px;
-  padding: 10px;
+  gap: 35px; */
+  display: flex;
+  align-items: center;
+  /* padding: 10px; */
+  /* padding: 0; */
+  gap: 20px;
 }
 
-.topbar .search-bar {
+/* .topbar .search-bar {
   display: flex;
-  width: 70%;
+  max-width: 70%;
   gap: 5px;
   margin-left: 25px;
-}
+} */
 
-.search-bar .logo-landscape {
+.logo-landscape {
   display: none;
 }
-.search-bar input {
+.topbar input {
   flex: 1 1 100%;
   border-radius: 15px;
   background-color: #d4d4d8;
   box-sizing: border-box;
   border: 0;
-  padding-left: 15px;
+  /* padding-left: 15px; */
   height: 30px;
+  max-width: 700px;
 }
 
-.header .fa_icon {
+.topbar .fa_icon {
   width: 1.5em;
 }
 
-.notifications-name .icon {
+.topbar .icon {
   width: 3em;
 }
 
-.notifications-name p,
+.push-left {
+  margin-left: auto;
+}
+
+.topbar p,
 .top .news h4 {
   font-size: 0.9em;
   font-weight: 700;
@@ -91,13 +104,13 @@ html {
   line-height: 1rem;
 }
 
-.profile .username,
+.bottombar .username,
 .sidebar a {
   font-size: 1rem;
   font-weight: 600;
 }
 
-.action-buttons .profile-button-action {
+.profile-button-action {
   padding: 8px 25px;
   border-radius: 18px;
   color: #fff;
@@ -105,62 +118,58 @@ html {
   border: 0;
   font-size: 1.05rem;
   box-shadow: 1px 0 3px #64748b;
+  cursor: pointer;
 }
 
-.topbar .notifications-name {
+/* .topbar .notifications-name {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   gap: 15px;
   margin-right: 2em;
-}
+} */
 
-.header .bottombar {
+/* .header .bottombar {
   grid-row: 2;
   justify-content: space-between;
-}
+} */
 
 .bottom .trend,
-.bottombar .profile,
-.header .bottombar,
 .sidebar p {
   display: flex;
   align-items: center;
 }
 
-.bottombar .action-buttons {
+/* .bottombar .action-buttons {
   display: flex;
   justify-content: flex-end;
   gap: 5px;
   margin-right: 2em;
-}
+  cursor: pointer;
+} */
 
 .sidebar {
   grid-column: 1;
   grid-row: 1/3;
   background-color: #0ea5e9;
-  padding-left: 25px;
+  padding: 10px 10px 15px 25px;
   display: flex;
   flex-flow: column nowrap;
-}
-
-.sidebar > div {
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  align-content: space-between;
+  gap: 20px;
 }
 
 .sidebar p {
   gap: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  /* margin-top: 20px; */
+  /* margin-bottom: 20px; */
+  cursor: pointer;
 }
 
 .sidebar .logo {
   max-height: 70px;
   padding: 20px;
   position: static;
+  cursor: pointer;
 }
 
 .sidebar .sidebar-icon {
@@ -172,7 +181,9 @@ html {
   color: #fff;
   font-size: 1.1rem;
 }
-
+.sidebar .push-down {
+  margin-top: auto;
+}
 .announcements,
 .projects {
   padding: 20px;
@@ -181,7 +192,6 @@ html {
 
 .projects {
   grid-column: 2;
-  z-index: 2;
 }
 
 .projects > div {
@@ -219,6 +229,10 @@ html {
   justify-content: flex-end;
   gap: 15px;
   align-self: flex-end;
+}
+
+.card .card-buttons img {
+  cursor: pointer;
 }
 
 .announcements {
@@ -278,37 +292,92 @@ html {
       minmax(455px, 1fr)
       minmax(250px, 350px);
   }
+
   .sidebar {
     grid-row: 2/3;
-    padding-left: 25px;
+    padding: 10px;
+    align-items: center;
   }
-  .sidebar > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .sidebar .logo {
-    display: none;
-  }
-  .search-bar .logo-landscape {
-    display: block;
-    max-height: 35px;
-    /* padding: 10px; */
-    align-self: flex-start;
-  }
-  .sidebar a {
-    display: none;
-  }
+
   .sidebar-icon {
     height: 35px;
+  }
+
+  .sidebar .logo,
+  .sidebar a {
+    display: none;
   }
 
   .header {
     grid-column: 1 / 4;
     grid-row: 1;
-    background-color: #fff;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    box-shadow: 1px 1px 5px #64748b;
+  }
+
+  .topbar .logo-landscape {
+    display: block;
+    max-height: 35px;
+    align-self: flex-start;
+  }
+}
+@media (max-width: 760px) {
+  .container {
+    height: min-content;
+    grid-template-columns: 1fr;
+    grid-template-rows: 140px 50px 1fr min-content;
+  }
+  .header {
+    grid-row: 1;
+    /* display: flex; */
+    flex-wrap: wrap;
+  }
+  .header .topbar,
+  .header .bottombar {
+    /* display: flex; */
+    justify-content: space-between;
+    gap: unset;
+  }
+  .topbar .notifications-name {
+    margin-right: 0;
+    /* justify-content: unset; */
+  }
+  .notifications-name p {
+    display: none;
+  }
+  .topbar .search-bar {
+    margin-left: 0;
+    width: fit-content;
+  }
+  .sidebar {
+    grid-row: 2;
+    padding-left: 0;
+    justify-content: space-between;
+  }
+  .sidebar > div,
+  .links-container-one,
+  .links-container-two {
+    grid-column: 1;
+    display: flex;
+    flex-direction: unset;
+  }
+  .sidebar p {
+    margin: 10px;
+  }
+  .sidebar-icon {
+    height: 25px;
+  }
+  .announcements,
+  .projects {
+    padding: 20px;
+    overflow: unset;
+  }
+  .projects {
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .announcements {
+    grid-column: 1;
+    grid-row: 4;
+    display: flex;
+    flex-direction: column;
   }
 }
