--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ html {
 .container {
   height: 100vh;
   display: grid;
-  /* grid-template-columns: 250px 1fr 350px; */
   grid-template-columns:
     minmax(200px, 250px)
     minmax(455px, 1fr)
@@ -31,45 +30,30 @@ html {
   grid-column: 2 / span 2;
   grid-row: 1;
   background-color: #fff;
-  /* display: grid;
-  grid-template-rows: 1fr 1fr; */
   display: flex;
   flex-direction: column;
   box-shadow: 1px 1px 5px #64748b;
   padding: 10px 20px;
 }
 
-.header .topbar,
-.header .bottombar {
-  grid-row: 1;
-  /* display: grid;
-  align-items: center;
-  grid-template-columns: 2fr 1fr;
-  gap: 35px; */
-  display: flex;
-  align-items: center;
-  /* padding: 10px; */
-  /* padding: 0; */
-  gap: 20px;
-}
-
-/* .topbar .search-bar {
-  display: flex;
-  max-width: 70%;
-  gap: 5px;
-  margin-left: 25px;
-} */
-
 .logo-landscape {
   display: none;
 }
+
+.header .topbar,
+.header .bottombar {
+  grid-row: 1;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
 .topbar input {
   flex: 1 1 100%;
   border-radius: 15px;
   background-color: #d4d4d8;
   box-sizing: border-box;
   border: 0;
-  /* padding-left: 15px; */
   height: 30px;
   max-width: 700px;
 }
@@ -82,7 +66,8 @@ html {
   width: 3em;
 }
 
-.push-left {
+.topbar .push-left,
+.bottombar .push-left {
   margin-left: auto;
 }
 
@@ -110,8 +95,9 @@ html {
   font-weight: 600;
 }
 
-.profile-button-action {
-  padding: 8px 25px;
+.bottombar button.profile-button-action {
+  padding: 8px 0;
+  width: 7em;
   border-radius: 18px;
   color: #fff;
   background-color: #0ea5e9;
@@ -121,32 +107,11 @@ html {
   cursor: pointer;
 }
 
-/* .topbar .notifications-name {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 15px;
-  margin-right: 2em;
-} */
-
-/* .header .bottombar {
-  grid-row: 2;
-  justify-content: space-between;
-} */
-
 .bottom .trend,
 .sidebar p {
   display: flex;
   align-items: center;
 }
-
-/* .bottombar .action-buttons {
-  display: flex;
-  justify-content: flex-end;
-  gap: 5px;
-  margin-right: 2em;
-  cursor: pointer;
-} */
 
 .sidebar {
   grid-column: 1;
@@ -160,8 +125,6 @@ html {
 
 .sidebar p {
   gap: 20px;
-  /* margin-top: 20px; */
-  /* margin-bottom: 20px; */
   cursor: pointer;
 }
 
@@ -318,53 +281,55 @@ html {
     max-height: 35px;
     align-self: flex-start;
   }
+
+  .bottombar .icon {
+    margin-left: 0;
+  }
 }
 @media (max-width: 760px) {
   .container {
     height: min-content;
     grid-template-columns: 1fr;
-    grid-template-rows: 140px 50px 1fr min-content;
+    /* grid-template-rows: min-content 50px 1fr min-content; */
+    grid-template-rows: min-content;
   }
+
   .header {
     grid-row: 1;
-    /* display: flex; */
-    flex-wrap: wrap;
   }
-  .header .topbar,
-  .header .bottombar {
-    /* display: flex; */
-    justify-content: space-between;
-    gap: unset;
-  }
-  .topbar .notifications-name {
-    margin-right: 0;
-    /* justify-content: unset; */
-  }
-  .notifications-name p {
+
+  .topbar p {
     display: none;
   }
-  .topbar .search-bar {
-    margin-left: 0;
-    width: fit-content;
+
+  .bottombar img.icon {
+    display: none;
   }
+
+  .bottombar button.profile-button-action {
+    font-size: 0.85em;
+  }
+
   .sidebar {
-    grid-row: 2;
-    padding-left: 0;
-    justify-content: space-between;
+    /* grid-row: 2; */
+    /* padding-left: 0; */
+    /* justify-content: space-between; */
+    position: sticky;
+    left: 0;
+    bottom: 0;
+    /* width: 100vw; */
+    grid-row: 4;
+    flex-direction: row;
   }
-  .sidebar > div,
-  .links-container-one,
-  .links-container-two {
-    grid-column: 1;
-    display: flex;
-    flex-direction: unset;
-  }
-  .sidebar p {
-    margin: 10px;
-  }
+
   .sidebar-icon {
     height: 25px;
   }
+
+  .sidebar .push-left {
+    margin-left: auto;
+  }
+
   .announcements,
   .projects {
     padding: 20px;
@@ -372,11 +337,11 @@ html {
   }
   .projects {
     grid-column: 1;
-    grid-row: 3;
+    grid-row: 2;
   }
   .announcements {
     grid-column: 1;
-    grid-row: 4;
+    grid-row: 3;
     display: flex;
     flex-direction: column;
   }
