--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html {
     minmax(455px, 1fr)
     minmax(280px, 350px);
   grid-template-rows: 140px 1fr;
-  background-color: #d4d4d8;
+  /* background-color: #d4d4d8; */
 }
 
 .card h3,
@@ -151,18 +151,20 @@ html {
 .projects {
   padding: 20px;
   overflow: auto;
+  background-color: #d4d4d8;
 }
 
 .projects {
   grid-column: 2;
 }
 
-.projects > div {
+.projects .card-container {
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
 }
 
-.projects .card {
+.card-container .card {
   background-color: #fff;
   padding: 15px 20px;
   margin: 10px;
@@ -307,23 +309,19 @@ html {
   }
 
   .bottombar button.profile-button-action {
-    font-size: 0.85em;
+    font-size: 1em;
   }
 
   .sidebar {
-    /* grid-row: 2; */
-    /* padding-left: 0; */
-    /* justify-content: space-between; */
     position: sticky;
     left: 0;
     bottom: 0;
-    /* width: 100vw; */
     grid-row: 4;
     flex-direction: row;
   }
 
   .sidebar-icon {
-    height: 25px;
+    height: 35px;
   }
 
   .sidebar .push-left {
@@ -332,7 +330,7 @@ html {
 
   .announcements,
   .projects {
-    padding: 20px;
+    padding: 10px;
     overflow: unset;
   }
   .projects {
